src/objects/Calendar_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for the Calendar to set which fields should be available for filter, sort, group, color, and count</description>
    <fields>
        <fullName>Color__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attribute (if it is a Picklist) has color code that should be displayed on the Program Calendar and where color is defined on the native Picklist color picker</description>
        <inlineHelpText>Attribute (if it is a Picklist) has color code that should be displayed on the Program Calendar and where color is defined on the native Picklist color picker</inlineHelpText>
        <label>Color</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <description>SOQL filter criteria for selecting metadata API values or record values</description>
        <inlineHelpText>SOQL filter criteria for selecting metadata API values or record values</inlineHelpText>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>Field API Name</description>
        <inlineHelpText>Field API Name</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterBy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Filter by this field</description>
        <inlineHelpText>Filter by this field</inlineHelpText>
        <label>FilterBy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FilterDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set default as the Filter By on initial page load</inlineHelpText>
        <label>FilterDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FilterOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of the Filters - set to 0 if there is no Filter</description>
        <inlineHelpText>Order of the Filters - set to 0 if there is no Filter</inlineHelpText>
        <label>FilterOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupBy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Group by this field</description>
        <inlineHelpText>Group by this field</inlineHelpText>
        <label>GroupBy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of the Groups - set to 0 if there is no Group</description>
        <inlineHelpText>Order of the Groups - set to 0 if there is no Group</inlineHelpText>
        <label>GroupOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <description>Mapped value from the Object&apos;s Field to the corresponding JSON existing standard field in the dhtmlxGantt code base</description>
        <inlineHelpText>Mapped value from the Object&apos;s Field to the corresponding JSON existing standard field in the dhtmlxGantt code base</inlineHelpText>
        <label>JSON</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Label for the setting the user sees while on the Program Calendar; this may be different than the field label on the field or record</description>
        <inlineHelpText>Label for the setting the user sees while on the Program Calendar; this may be different than the field label on the field or record</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object API Name</description>
        <inlineHelpText>Object API Name</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchBy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Free text search by this field</description>
        <inlineHelpText>Free text search by this field</inlineHelpText>
        <label>SearchBy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SearchOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of the Searches - set to 0 if there is no Search</description>
        <inlineHelpText>Order of the Searches - set to 0 if there is no Search</inlineHelpText>
        <label>SearchOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SortBy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sort by this field</description>
        <inlineHelpText>Sort by this field</inlineHelpText>
        <label>SortBy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of the Sorts - set to 0 if there is no Sort</description>
        <inlineHelpText>Order of the Sorts - set to 0 if there is no Sort</inlineHelpText>
        <label>SortOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Field Data Definition Type if for example a Picklist (e.g. Channel) or an Record (e.g. Tags record for Brand or Territory)</description>
        <inlineHelpText>Field Data Definition Type if for example a Picklist (e.g. Channel) or an Record (e.g. Tags record for Brand or Territory)</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Calendar Settings</label>
</CustomObject>